@@ -1,5 +1,8 @@
 Revision history for XML::CompareML
 
+    - Added XML::LibXSLT to the dependencies.
+    - Converted Build.PL to use XML::Grammar::Builder.
+
 0.2.4    Sat Jul 12 15:18:20 IDT 2008
     - Added the XSLT stylesheet under extradata/
     - Adapted Build.PL accordingly.
